# ERP-AI-Agents

./: .bandit  .env.example  .gitignore  00_START_HERE.md  1500_AGENTS_COMPLETE_SUMMARY.md  AGENT_CATALOG_STATUS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile.runpod  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  OPTION_2_COMPLETION_SUMMARY.md  PHASE_2_AND_3_COMPLETION.md  PLATFORM_GUIDE.md  PRODUCTION_READINESS.md  README.md  RUNBOOK.md  docker-compose.yml  requirements-enterprise.txt  requirements-serverless.txt  runpod-config.yaml
config-management/: .env.template  config_service.py  requirements.txt
docs/: AGENT_IMPLEMENTATIONS_SUMMARY.md  AI_AGENT_IMPLEMENTATION_TEMPLATE.md  ARCHITECTURE_700_AGENTS.md  COMPLETE_PLATFORM_ROADMAP.md  ERP_INTEGRATION.md  FULL_AGENT_IMPLEMENTATION_GUIDE.md  PHASE_2_AGENTS_SUMMARY.md  PLATFORM_EXPANSION_STRATEGY.md  README.md  Security_Report.md  Technical_Specifications.md  acceptance-criteria.md  architecture.md  brd.md  database-schema.md  deployment.md  enterprise-architecture.md  gap-analysis.md  hardware-requirements.md  hld.md  lld.md  prd.md  release-notes.md  software-architecture.md  software-requirements.md  technical-specifications.md  technical-writeup.md  testing-requirements-aidd.md  training-manual-admin.md  training-manual-developer.md  training-manual-enduser.md  training-video-scripts.md  use-cases.md  user-manual-admin.md  user-manual-developer.md  user-manual-enduser.md  workflows.md
erp/: module.manifest.yaml
examples/code-generator/: Cargo.toml  README.md
examples/code-generator/src/: main.rs
(+4984 files in other folders)
