[package]
name = "code-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
prometheus = "0.13"
env_logger = "0.11"
log = "0.4"
anthropic = "0.1"  # Note: Use actual anthropic-sdk-rust in production

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
